minikube/bin/jenkins.ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/tls-acme: "true"
  name: jenkins
  namespace: jenkins
spec:
  tls:
  - hosts:
    - jenkins.dev.gcp.k8m.io
    - jenkins.dev.k8m.io
  - secretName: jenkins
  backend:
    serviceName: echoserver
    servicePort: 8080
  rules:
    - host: jenkins.dev.gcp.k8m.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /

    - host: jenkins.dev.k8m.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
